fix small cutoff differences

--- a/site/src/component/AppHeader/AppHeader.scss
+++ b/site/src/component/AppHeader/AppHeader.scss
@@ -2,9 +2,9 @@
 
 #peterportal-logo {
   width: auto;
-  height: 32px;
-  @media (min-width: globals.$mobile-cutoff) {
-    height: 36px;
+  height: 36px;
+  @media (max-width: globals.$mobile-cutoff) {
+    height: 32px;
   }
 }
 
